--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 
     <form id="book-form" action="https://httpbin.org/post" method="post">
         <label for="form_title">Title:</label>
-        <input type="text" id="form_title">
+        <input type="text" id="form_title" name="form_title">
         <label for="form_author">Author:</label>
-        <input type="text" id="form_author">
+        <input type="text" id="form_author" name="form_author">
         <label for="form_pages">Page Count:</label>
-        <input type="number" id="form_pages">
+        <input type="number" id="form_pages" name="form_pages">
         <label for="form_description">Description:</label>
         <textarea name="form_description" id="form_description" rows="10" cols="30"></textarea>
         <label for="form_read">Read?</label>
         <input type="checkbox" id="Read" name="form_read">
         <label for="form_image">Book Cover:</label>
         <input type="file" name="form_image" id="form_image">
+        <button type="submit">Submit</button>
     </form>
 
     <script src="index.js"></script>
