Display user input in the browser as expected
The issue we now face is when we add a second book it loops through the array again and creates duplicates

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <label for="form_description">Description:</label>
             <textarea name="form_description" id="form_description" rows="10" cols="30"></textarea>
             <label for="form_read">Read?</label>
-            <input type="checkbox" id="Read" name="form_read">
+            <input type="checkbox" id="form_read" name="form_read">
             <label for="form_image">Book Cover:</label>
             <input type="file" name="form_image" id="form_image">
             <button id="submit-btn" type="submit">Submit</button>
