Attempt to validate the input but failed to do so
Since this is out of the scope of my knowledge I will leave this for now

--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
     <dialog>
         <form id="book-form" action="" method="">
             <label for="form_title">Title:</label>
-            <input type="text" id="form_title" name="form_title">
+            <input type="text" id="form_title" name="form_title" required>
             <label for="form_author">Author:</label>
-            <input type="text" id="form_author" name="form_author">
+            <input type="text" id="form_author" name="form_author" required>
             <label for="form_pages">Page Count:</label>
             <input type="number" id="form_pages" name="form_pages">
             <label for="form_description">Description:</label>
             <textarea name="form_description" id="form_description" rows="10" cols="30"></textarea>
-            <label for="form_read">Read?</label>
-            <input type="checkbox" id="form_read" name="form_read">
             <label for="form_image">Book Cover:</label>
             <input type="file" name="form_image" id="form_image">
             <button id="submit-btn" type="submit">Submit</button>
