Rearrange elements and create the color theme

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 
+    <div id="header-bar">
+    <h1 id="header"> ENTER THE LIBRARY</h1>
+    <button id="add-book">Add Book</button>
+    </div>
+
     <div id="grid-container">
 
     </div>
@@ -25,13 +30,13 @@
             <label for="form_pages">Page Count:</label>
             <input type="number" id="form_pages" name="form_pages">
             <label for="form_description">Description:</label>
-            <textarea name="form_description" id="form_description" rows="10" cols="30"></textarea>
-            <label for="form_image">Book Cover:</label>
+            <textarea name="form_description" id="form_description" rows="5" cols="30"></textarea>
+            <label for="form_image"></label>
             <input type="file" name="form_image" id="form_image">
             <button id="submit-btn" type="submit">Submit</button>
         </form>
     </dialog>
-    <button id="add-book">Add Book</button>
+    
 
     <script src="index.js"></script>
 </body>
