Style and add animation to user form

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <label for="form_author">Author:</label>
             <input type="text" id="form_author" name="form_author" required>
             <label for="form_pages">Page Count:</label>
-            <input type="number" id="form_pages" name="form_pages">
+            <input type="number" id="form_pages" name="form_pages" class="no-spinners">
             <label for="form_description">Description:</label>
             <textarea name="form_description" id="form_description" rows="5" cols="30"></textarea>
             <label for="form_image"></label>
