Reset form input after submission

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <dialog>
-        <form id="book-form" action="" method="">
+        <form name="user-form" id="book-form" action="" method="">
             <label for="form_title">Title:</label>
             <input type="text" id="form_title" name="form_title" required>
             <label for="form_author">Author:</label>
@@ -33,7 +33,7 @@
             <textarea name="form_description" id="form_description" rows="5" cols="30"></textarea>
             <label for="form_image"></label>
             <input type="file" name="form_image" id="form_image">
-            <button id="submit-btn" type="submit">Submit</button>
+            <button id="submit-btn" type="button">Submit</button>
         </form>
     </dialog>
     
