--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
             <input type="number" id="form_pages" name="form_pages" class="no-spinners">
             <label for="form_description">Description:</label>
             <textarea name="form_description" id="form_description" rows="5" cols="30"></textarea>
-            <button id="submit-btn" type="button">Submit</button>
+            <fieldset>
+                <legend>
+                    Have you read this book?
+                </legend>
+                    <label for="radio-yes">Yes</label>
+                    <input type="radio" id="radio-yes" name="radio-btn" value="yes">
+                    <label for="radio-no">No</label>
+                    <input type="radio" id="radio-no" name="radio-btn" value="no">
+                    <button id="submit-btn" type="button">Submit</button>
+                
+            </fieldset>
         </form>
     </dialog>
     
