design a brand new switch that is inverted

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 </head>
 <body>
 
+    
+    
+
     <div id="header-bar">
+        <label class="switch-yes">
+        <input type="checkbox">
+        <span class="slider-yes round-yes"></span>
+    </label>
     <h1 id="header"> ENTER THE LIBRARY</h1>
     <button id="add-book">Add Book</button>
     </div>
