--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                     Have you read this book?
                 </legend>
                     <label for="radio-yes">Yes</label>
-                    <input type="radio" id="radio-yes" name="radio-btn" value="yes">
+                    <input type="radio" id="radio-yes" name='radio-btn' value="yes">
                     <label for="radio-no">No</label>
-                    <input type="radio" id="radio-no" name="radio-btn" value="no">
-                    <button id="submit-btn" type="button">Submit</button>
+                    <input type="radio" id="radio-no" name='radio-btn' value="no">
+                    <button id="submit-btn" type="button" onclick="displayNewBook()">Submit</button>
                 
             </fieldset>
         </form>
