Catch none decision of radio button and reload dialog

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     Have you read this book?
                 </legend>
                     <label for="radio-yes">Yes</label>
-                    <input type="radio" id="radio-yes" name='radio-btn' value="yes">
+                    <input type="radio" id="radio-yes" name='radio-btn' value="yes" required>
                     <label for="radio-no">No</label>
-                    <input type="radio" id="radio-no" name='radio-btn' value="no">                
+                    <input type="radio" id="radio-no" name='radio-btn' value="no" required>                
             </fieldset>
             <button id="submit-btn" type="button" onclick="displayNewBook()">Submit</button>
         </form>
